logo bug fix on mobile

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -112,7 +112,7 @@
     font-family: 'Pacifico', cursive; */
     width: 100%;
     aspect-ratio: 3/2;
-    object-fit: cover;
+    object-fit: contain;
     mix-blend-mode: color-burn;
     overflow: visible;
   }
